@@ -138,8 +138,8 @@ HttpResponseHandle HttpConnection::receiveResponse()
   //   Connection: close is received or the remote server is not HTTP/1.1.
   // We don't care whether non-HTTP/1.1 server returns Connection: keep-alive.
   SharedHandle<HttpHeader> httpHeader = proc->getHttpResponseHeader();
-  if(Util::toLower(httpHeader->getFirst("Connection")).find("close") != std::string::npos
-     || httpHeader->getVersion() != "HTTP/1.1") {
+  if(Util::toLower(httpHeader->getFirst(HttpHeader::CONNECTION)).find(HttpHeader::CLOSE) != std::string::npos
+     || httpHeader->getVersion() != HttpHeader::HTTP_1_1) {
     entry->getHttpRequest()->getRequest()->supportsPersistentConnection(false);
   } else {
     entry->getHttpRequest()->getRequest()->supportsPersistentConnection(true);
